--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "homepage" : "https://mo2stafa.github.io/personal-website",
+  "homepage": "https://mo2stafa.github.io/personal-website",
   "name": "Mostafa's Portfolio",
   "version": "0.1.0",
   "scripts": {
     "start": "react-scripts start",
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -33,10 +33,12 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "blurhash": "^2.0.5",
     "bootstrap": "^5.1.3",
     "fslightbox-react": "^1.6.2-2",
     "react": "^17.0.2",
     "react-animation-on-scroll": "^5.1.0",
+    "react-blurhash": "^0.3.0",
     "react-bootstrap": "^2.2.3",
     "react-countdown": "^2.3.2",
     "react-countup": "^6.1.1",
